tests/struct_attributes/inner/04-incomplete_eq.rs
use lazy_nd::lazy_nd;

#[lazy_nd(inner =)]
struct Test {}

fn main() {}
